--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
   <main class="main">
-    <h1 class="h1">В июле 2021 года я&nbsp;потратил на свои фермы 15 878 ₽</h1>
+    <h1 class="h1">В июле 2021 года я&nbsp;потратил на&nbsp;свои фермы 15 878 ₽</h1>
     <table class="table">
       <thead class="thead">
         <tr class="tr">
