--- a/index.html
+++ b/index.html
@@ -22,23 +22,22 @@
       </thead>
       <tbody class="tbody">
         <tr class="tr">
-          <td class="td">1 июля</td>
-          <td class="td">11 113 ₽</td>
+          <td class="td" rowspan="2">1 июля</td>
+          <td class="td currency-value">11 113 ₽</td>
           <td class="td">Оплата электроэнергии</td>
         </tr>
         <tr class="tr">
-          <td class="td"></td>
-          <td class="td">2 500 ₽</td>
+          <td class="td currency-value">2 500 ₽</td>
           <td class="td">Два кулера</td>
         </tr>
         <tr class="tr">
           <td class="td">16 июля</td>
-          <td class="td">1 365 ₽</td>
+          <td class="td currency-value">1 365 ₽</td>
           <td class="td">Вентилятор</td>
         </tr>
         <tr class="tr">
           <td class="td">30 июля</td>
-          <td class="td">900 ₽</td>
+          <td class="td currency-value">900 ₽</td>
           <td class="td">Сетевой фильтр взамен сгоревшего</td>
         </tr>
       </tbody>
