--- a/index.html
+++ b/index.html
@@ -15,32 +15,35 @@
     <table class="table">
       <thead class="thead">
         <tr class="tr">
-          <th class="th">Дата</th>
           <th class="th">Трата</th>
-          <th class="th">На что</th>
+          <th class="th">На что</th>  
         </tr>
       </thead>
-      <tbody class="tbody">
-        <tr class="tr">
-          <td class="td" rowspan="2">1 июля</td>
-          <td class="td currency-value">11 113 ₽</td>
-          <td class="td">Оплата электроэнергии</td>
-        </tr>
-        <tr class="tr">
-          <td class="td currency-value">2 500 ₽</td>
-          <td class="td">Два кулера</td>
-        </tr>
-        <tr class="tr">
-          <td class="td">16 июля</td>
-          <td class="td currency-value">1 365 ₽</td>
-          <td class="td">Вентилятор</td>
-        </tr>
-        <tr class="tr">
-          <td class="td">30 июля</td>
-          <td class="td currency-value">900 ₽</td>
-          <td class="td">Сетевой фильтр взамен сгоревшего</td>
-        </tr>
-      </tbody>
+      <tr class="tr date">
+        <td class="td" colspan="2">1 июля</tr>
+      </tr>
+      <tr class="tr expense">
+        <td class="td price">11 113 ₽</td>
+        <td class="td">Оплата электроэнергии</td>
+      </tr>
+      <tr class="tr expense">
+        <td class="td price">2 500 ₽</td>
+        <td class="td">Два куллера</td>
+      </tr>
+      <tr class="tr date">
+        <td class="td" colspan="2">16 июля</tr>
+      </tr>
+      <tr class="tr expense">
+        <td class="td price">1 365 ₽</td>
+        <td class="td">Вентилятор</td>
+      </tr>
+      <tr class="tr date">
+        <td class="td" colspan="2">30 июля</tr>
+      </tr>
+      <tr class="tr expense">
+        <td class="td price">900 ₽</td>
+        <td class="td">Сетевой фильтр взамен сгоревшего</td>
+      </tr>
     </table>
   </main>
 </body>
