--- a/index.html
+++ b/index.html
@@ -15,8 +15,7 @@
     <table class="table">
       <thead class="thead">
         <tr class="tr">
-          <th class="th">Трата</th>
-          <th class="th">На что</th>  
+          <th class="th" colspan="2">На что потратил</th>  
         </tr>
       </thead>
       <tr class="tr date">
