--- a/index.html
+++ b/index.html
@@ -18,33 +18,34 @@
           <th class="th" colspan="2">На что потратил</th>  
         </tr>
       </thead>
-      <tr class="tr date">
-        <td class="td" colspan="2">1 июля</tr>
-      </tr>
-      <tr class="tr expense">
-        <td class="td price">11 113 ₽</td>
-        <td class="td">Оплата электроэнергии</td>
-      </tr>
-      <tr class="tr expense">
-        <td class="td price">2 500 ₽</td>
-        <td class="td">Два куллера</td>
-      </tr>
-      <tr class="tr date">
-        <td class="td" colspan="2">16 июля</tr>
-      </tr>
-      <tr class="tr expense">
-        <td class="td price">1 365 ₽</td>
-        <td class="td">Вентилятор</td>
-      </tr>
-      <tr class="tr date">
-        <td class="td" colspan="2">30 июля</tr>
-      </tr>
-      <tr class="tr expense">
-        <td class="td price">900 ₽</td>
-        <td class="td">Сетевой фильтр взамен сгоревшего</td>
-      </tr>
+      <tbody class="tbody">
+        <tr class="tr date">
+          <td class="td" colspan="2">1 июля</tr>
+        </tr>
+        <tr class="tr expense">
+          <td class="td price">11 113 ₽</td>
+          <td class="td">Оплата электроэнергии</td>
+        </tr>
+        <tr class="tr expense">
+          <td class="td price">2 500 ₽</td>
+          <td class="td">Два куллера</td>
+        </tr>
+        <tr class="tr date">
+          <td class="td" colspan="2">16 июля</tr>
+        </tr>
+        <tr class="tr expense">
+          <td class="td price">1 365 ₽</td>
+          <td class="td">Вентилятор</td>
+        </tr>
+        <tr class="tr date">
+          <td class="td" colspan="2">30 июля</tr>
+        </tr>
+        <tr class="tr expense">
+          <td class="td price">900 ₽</td>
+          <td class="td">Сетевой фильтр взамен сгоревшего</td>
+        </tr>
+      </tbody>
     </table>
   </main>
 </body>
-
 </html>
