--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         </tr>
         <tr class="tr expense">
           <td class="td price">2 500 ₽</td>
-          <td class="td">Два куллера</td>
+          <td class="td">Два кулера</td>
         </tr>
         <tr class="tr date">
           <td class="td" colspan="2">16 июля</tr>
